--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "10.0.0",
+    "@nestjs/config": "3.0.1",
     "@nestjs/core": "10.0.0",
     "@nestjs/jwt": "10.1.1",
     "@nestjs/mongoose": "10.0.1",
@@ -30,6 +31,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "crypto-js": "4.1.1",
+    "joi": "17.10.1",
     "mongoose": "7.5.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
